--- a/vim/rc/lsp.toml
+++ b/vim/rc/lsp.toml
@@ -86,6 +86,12 @@ lua_source = '''
     capabilities = capabilities,
     root_dir = util.root_pattern('pubspec.yaml', '.dart')
   }
+
+  -- texlab は HEAD でバグ修正されてるから、バージョン上がるまではここで。
+  nvim_lsp['texlab'].setup {
+    on_attach = on_attach,
+    capabilities = capabilities,
+  }
 '''
 [plugins.ftplugin]
 cpp = '''
