--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -42,8 +42,9 @@ lua_source = '''
     ensure_installed = 'all',
     additional_vim_regex_highlighting = false,
 
-    -- m1でエラー出るから
-    ignore_install = { 'phpdoc' },
+    -- phpdoc: m1でエラー出るから
+    -- git_rebase: intelでエラーでてる(m1は未検証)
+    ignore_install = { 'phpdoc', 'git_rebase' },
 
     -- help : ハイライト変になる
     -- tex  : snipet挿入後とかでエラーが出る
