--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -6,6 +6,7 @@ hook_add = '''
   inoremap <expr><C-p>  pum#visible() ? pum#map#select_relative(-1) : '<Cmd>normal! gk<CR>'
   inoremap <expr><Down> pum#visible() ? pum#map#select_relative(+1) : '<Cmd>normal! gj<CR>'
   inoremap <expr><Up>   pum#visible() ? pum#map#select_relative(-1) : '<Cmd>normal! gk<CR>'
+  inoremap <expr><ESC>  pum#entered() ? pum#map#cancel() : '<ESC>'
   " <CR> は lexima.vim で定義
 '''
 hook_source = '''
@@ -24,7 +25,7 @@ hook_add = '''
 
 [[plugins]]
 repo = 'cohama/lexima.vim'
-# rev = 'feature/feedkeys'
+rev = 'feature/feedkeys'
 depends = 'pum.vim'
 on_event = 'InsertEnter'
 hook_add = '''
