--- a/tmux/config/option.tmux.conf
+++ b/tmux/config/option.tmux.conf
@@ -8,5 +8,8 @@ set -g history-limit 100000
 set -g base-index 1
 set -g pane-base-index 1
 
+# ESC の遅延を 0 に
+set -g escape-time 0
+
 # undercurl 対応 (できてないのだが。。。はて)
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
