--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -226,6 +226,21 @@ repo = 'matsui54/ddu-source-help'
 on_source = 'ddu.vim'
 
 [[plugins]]
+repo = '~/Projects/VimPlugin/ddu-nvim-notify-history'
+on_source = 'ddu.vim'
+lua_source = '''
+  require('ddu-nvim-notify-history').setup {
+    command = 'NotifyHistory',
+    ddu_option = {
+      ui = 'ff',
+      kindOptions = {
+        notify_history = { defaultAction = 'open' }
+      }
+    }
+  }
+'''
+
+[[plugins]]
 repo = 'ryota2357/cpl'
 # repo = '~/CompetitiveProgramming/Library/cpl'
 on_source = 'ddu.vim'
