--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -3,12 +3,12 @@ repo = 'Shougo/ddc.vim'
 depends = ['denops.vim', 'pum.vim', 'context_filetype.vim']
 on_event = ['InsertEnter', 'CursorHold', 'CmdlineEnter']
 hook_add = '''
-  let g:ddc_source_options = {
-    \   '_': {
-    \     'ignoreCase': v:true,
-    \     'matchers': ['matcher_fuzzy'],
-    \     'sorters': ['sorter_fuzzy'],
-    \     'converters': ['converter_fuzzy']
+  let g:ddc_source_options = #{
+    \   _: #{
+    \     ignoreCase: v:true,
+    \     matchers: ['matcher_fuzzy'],
+    \     sorters: ['sorter_fuzzy'],
+    \     converters: ['converter_fuzzy']
     \   }
     \ }
 
@@ -36,47 +36,47 @@ hook_add = '''
   endfunction
 '''
 hook_source = '''
-  call ddc#custom#patch_global({
-   \   'ui': 'pum',
-   \   'sources': ['around', 'skkeleton'],
-   \   'cmdlineSources': ['cmdline', 'cmdline-history', 'around'],
-   \   'sourceOptions': g:ddc_source_options,
-   \   'sourceParams': { 'around': { 'maxSize': 500 } },
-   \   'autoCompleteEvents': ['InsertEnter', 'TextChangedI', 'TextChangedP', 'CmdlineEnter', 'CmdlineChanged'],
-   \   'backspaceCompletion': v:true,
+  call ddc#custom#patch_global(#{
+   \   ui: 'pum',
+   \   sources: ['around', 'skkeleton'],
+   \   cmdlineSources: ['cmdline', 'cmdline-history', 'around'],
+   \   sourceOptions: g:ddc_source_options,
+   \   sourceParams: { 'around': { 'maxSize': 500 } },
+   \   autoCompleteEvents: ['InsertEnter', 'TextChangedI', 'TextChangedP', 'CmdlineEnter', 'CmdlineChanged'],
+   \   backspaceCompletion: v:true,
    \ })
 
-  call ddc#custom#patch_filetype(['vim'], {
-    \   'sources': ['vsnip', 'nvim-lsp', 'around']
+  call ddc#custom#patch_filetype(['vim'], #{
+    \   sources: ['vsnip', 'nvim-lsp', 'around']
     \ })
-  call ddc#custom#patch_filetype(['cpp', 'cs', 'dart', 'typescript', 'typescriptreact', 'rust', 'ruby', 'lua'], {
-    \   'sources': ['nvim-lsp', 'around']
+  call ddc#custom#patch_filetype(['cpp', 'cs', 'dart', 'typescript', 'typescriptreact', 'rust', 'ruby', 'lua'], #{
+    \   sources: ['nvim-lsp', 'around']
     \ })
-  call ddc#custom#patch_filetype(['css', 'scss'], {
-    \   'sources': ['nvim-lsp']
+  call ddc#custom#patch_filetype(['css', 'scss'], #{
+    \   sources: ['nvim-lsp']
     \ })
-  call ddc#custom#patch_filetype(['tex'], {
-    \   'sources': ['nvim-lsp', 'vsnip', 'around', 'skkeleton'],
-    \   'sourceOptions': {
-    \     'vsnip': { 'minAutoCompleteLength': 1 },
-    \     'nvim-lsp': {
-    \       'minAutoCompleteLength': 3,
-    \       'matchers': ['matcher_head'],
+  call ddc#custom#patch_filetype(['tex'], #{
+    \   sources: ['nvim-lsp', 'vsnip', 'around', 'skkeleton'],
+    \   sourceOptions: #{
+    \     vsnip: #{ minAutoCompleteLength: 1 },
+    \     nvim-lsp: #{
+    \       minAutoCompleteLength: 3,
+    \       matchers: ['matcher_head'],
     \     }
     \   }
     \ })
-  call ddc#custom#patch_filetype(['markdown'], {
-    \   'sources': ['around', 'mocword']
+  call ddc#custom#patch_filetype(['markdown'], #{
+    \   sources: ['around', 'mocword']
+    \ })
+
+  call ddc#custom#patch_filetype(['ddu-ff-filter'], #{
+    \   specialBufferCompletion: v:false
     \ })
 
   call ddc#custom#set_context_global({ ->
-    \ ddc#syntax#in('comment') ? {
-    \   'sources': ['around', 'mocword'],
+    \ ddc#syntax#in('comment') ? #{
+    \   sources: ['around', 'mocword'],
     \ } : {} })
-
-  call ddc#custom#patch_filetype(['ddu-ff-filter'],
-    \   'specialBufferCompletion', v:false
-    \ )
 
   lua require'rc.util'.setcellwidths2({}, true)
   call ddc#enable()
@@ -86,10 +86,10 @@ hook_source = '''
 repo = 'Shougo/ddc-source-around'
 on_source = 'ddc.vim'
 hook_source = '''
-  let g:ddc_source_options['around'] = {
-    \   'mark': '',
-    \   'matchers': ['matcher_head', 'matcher_length'],
-    \   'converters': ['converter_remove_overlap']
+  let g:ddc_source_options['around'] = #{
+    \   mark: '',
+    \   matchers: ['matcher_head', 'matcher_length'],
+    \   converters: ['converter_remove_overlap']
     \ }
   lua require'rc.util'.setcellwidths2(0xf10c, false)
 '''
@@ -98,12 +98,12 @@ hook_source = '''
 repo = 'Shougo/ddc-source-mocword'
 on_source = 'ddc.vim'
 hook_source = '''
-  let g:ddc_source_options['mocword'] = {
-    \   'mark': '',
-    \   'matchers': ['matcher_head', 'matcher_length'],
-    \   'converters': ['converter_remove_overlap'],
-    \   'isVolatile': v:true,
-    \   'minAutoCompleteLength': 1
+  let g:ddc_source_options['mocword'] = #{
+    \   mark: '',
+    \   matchers: ['matcher_head', 'matcher_length'],
+    \   converters: ['converter_remove_overlap'],
+    \   isVolatile: v:true,
+    \   minAutoCompleteLength: 1
     \ }
   lua require'rc.util'.setcellwidths2(0xf02d, false)
 '''
@@ -112,10 +112,10 @@ hook_source = '''
 repo = 'Shougo/ddc-source-nvim-lsp'
 on_source = 'ddc.vim'
 hook_source = '''
-  let g:ddc_source_options['nvim-lsp'] = {
-    \   'mark': '',
-    \   'dup': 'keep',
-    \   'forceCompletionPattern': '\.\w*|:\w*|->\w*'
+  let g:ddc_source_options['nvim-lsp'] = #{
+    \   mark: '',
+    \   dup: 'keep',
+    \   forceCompletionPattern: '\.\w*|:\w*|->\w*'
     \ }
   lua require'rc.util'.setcellwidths2(0xf233, false)
 '''
@@ -124,9 +124,9 @@ hook_source = '''
 repo = 'Shougo/ddc-source-cmdline'
 on_source = 'ddc.vim'
 hook_source = '''
-  let g:ddc_source_options['cmdline'] = {
-    \   'mark': '',
-    \   'minAutoCompleteLength': 1
+  let g:ddc_source_options['cmdline'] = #{
+    \   mark: '',
+    \   minAutoCompleteLength: 1
     \ }
   lua require'rc.util'.setcellwidths2(0xf120, false)
 '''
@@ -135,10 +135,10 @@ hook_source = '''
 repo = 'Shougo/ddc-source-cmdline-history'
 on_source = 'ddc.vim'
 hook_source = '''
-  let g:ddc_source_options['cmdline-history'] = {
-    \   'mark': '',
-    \   'matchers': ['matcher_head', 'matcher_length'],
-    \   'converters': ['converter_remove_overlap']
+  let g:ddc_source_options['cmdline-history'] = #{
+    \   mark: '',
+    \   matchers: ['matcher_head', 'matcher_length'],
+    \   converters: ['converter_remove_overlap']
     \ }
   lua require'rc.util'.setcellwidths2(0xf1da, false)
 '''
@@ -157,9 +157,9 @@ repo = 'hrsh7th/vim-vsnip-integ'
 on_source = 'ddc.vim'
 depends = 'vim-vsnip'
 hook_source = '''
-  let g:ddc_source_options['vsnip'] = {
-    \   'mark': '',
-    \   'dup': 'keep'
+  let g:ddc_source_options['vsnip'] = #{
+    \   mark: '',
+    \   dup: 'keep'
     \ }
   lua require'rc.util'.setcellwidths2(0xf135, false)
 
@@ -171,20 +171,20 @@ hook_source = '''
 repo = 'vim-skk/skkeleton'
 on_source = 'ddc.vim'
 hook_source = '''
-  call skkeleton#config({
-    \   'globalDictionaries': ['~/.local/share/SKK/dict/SKK-JISYO.L'],
-    \   'eggLikeNewline': v:true,
-    \   'registerConvertResult': v:true
+  call skkeleton#config(#{
+    \   globalDictionaries: ['~/.local/share/SKK/dict/SKK-JISYO.L'],
+    \   eggLikeNewline: v:true,
+    \   registerConvertResult: v:true
     \ })
   imap <C-j> <Plug>(skkeleton-enable)
   cmap <C-j> <Plug>(skkeleton-enable)
-  let g:ddc_source_options['skkeleton'] = {
-    \   'mark': '',
-    \   'matchers': ['skkeleton'],
-    \   'sorters': [],
-    \   'converters': [],
-    \   'isVolatile': v:true,
-    \   'minAutoCompleteLength': 2
+  let g:ddc_source_options['skkeleton'] = #{
+    \   mark: '',
+    \   matchers: ['skkeleton'],
+    \   sorters: [],
+    \   converters: [],
+    \   isVolatile: v:true,
+    \   minAutoCompleteLength: 2
     \ }
   lua require'rc.util'.setcellwidths2(0xf044, false)
 '''
