--- a/vim/rc/lsp.toml
+++ b/vim/rc/lsp.toml
@@ -8,6 +8,7 @@ hook_add = '''
 lua_source = '''
   local nvim_lsp = require('lspconfig')
   local util = require('lspconfig.util')
+  local mason_lspconfig = require('mason-lspconfig')
 
   for type, icon in pairs({ Error = "", Warn = "", Hint = "", Info = "" }) do
     local hl = "DiagnosticSign" .. type
@@ -18,22 +19,25 @@ lua_source = '''
     update_in_insert = true,
   })
 
-  local capabilities = vim.lsp.protocol.make_client_capabilities()
-  capabilities.textDocument.completion.completionItem.snippetSupport = true
-
-  local on_attach = function(_, bufnr)
-    local nnoremap =  function(key, cmd) vim.keymap.set('n', key, cmd, { buffer = bufnr, silent = true }) end
-    nnoremap(',d', vim.lsp.buf.definition)
-    nnoremap(',i', vim.lsp.buf.implementation)
-    nnoremap(',r', vim.lsp.buf.rename)
-    nnoremap(',x', vim.diagnostic.open_float)
-    nnoremap(',l', vim.lsp.buf.hover)
-    nnoremap(',s', vim.lsp.buf.signature_help)
-    nnoremap(',a', vim.lsp.buf.code_action)
-    nnoremap(',f', vim.lsp.buf.references)
-  end
-
-  local add_opts = {
+  local options = {
+    global = {
+      on_attach = function(_, bufnr)
+        local nnoremap =  function(key, cmd) vim.keymap.set('n', key, cmd, { buffer = bufnr, silent = true }) end
+        nnoremap(',d', vim.lsp.buf.definition)
+        nnoremap(',i', vim.lsp.buf.implementation)
+        nnoremap(',r', vim.lsp.buf.rename)
+        nnoremap(',x', vim.diagnostic.open_float)
+        nnoremap(',l', vim.lsp.buf.hover)
+        nnoremap(',s', vim.lsp.buf.signature_help)
+        nnoremap(',a', vim.lsp.buf.code_action)
+        nnoremap(',f', vim.lsp.buf.references)
+      end,
+      capabilities = (function()
+        local c = vim.lsp.protocol.make_client_capabilities()
+        c.textDocument.completion.completionItem.snippetSupport = true
+        return c
+      end)()
+    },
     denols = {
       init_options = { lint = true, unstable = true },
       root_dir = util.root_pattern('deno.json', 'deno.jsonc', 'denops'),
@@ -60,30 +64,34 @@ lua_source = '''
       }
     },
     tsserver = {
-      root_dir = util.root_pattern('package.json', 'node_modules')
+      root_dir = function(fname)
+        local deno_root = util.root_pattern('deno.json', 'deno.jsonc', 'denops')(fname)
+        local node_root = util.root_pattern('package.json', 'node_modules')(fname)
+        if deno_root ~= nil then
+            return nil
+        end
+        return node_root
+      end
     },
     solargraph = {
       single_file_support = true
     }
   }
 
-  require('mason-lspconfig').setup_handlers {
+  mason_lspconfig.setup_handlers {
     function(server_name)
       if server_name == "omnisharp" then
         return
       end
-      local opts = vim.tbl_extend('force', {
-        on_attach = on_attach,
-        capabilities = capabilities
-      }, add_opts[server_name] or {})
+      local opts = vim.tbl_extend('force', options.global, options[server_name] or {})
       nvim_lsp[server_name].setup(opts)
     end
   }
 
   -- Mason に dartls ないので個別に設定、dartls は dart に付属してる
   nvim_lsp['dartls'].setup {
-    on_attach = on_attach,
-    capabilities = capabilities,
+    on_attach = options.global.on_attach,
+    capabilities = options.global.capabilities,
     root_dir = util.root_pattern('pubspec.yaml', '.dart')
   }
 '''
